<resources>
    <string name="app_name">LocationTrackingExample</string>

    <!--main activity    -->
    <string name="label_accuracy">Accuracy:</string>
    <string name="label_altitude">Altitude:</string>
    <string name="label_longitude">Longitude:</string>
    <string name="label_latitude">Latitude:</string>
    <string name="label_distance">Distance: </string>
    <string name="label_duration">Duration: </string>

    <!--menu-->
    <string name="action_clear_map">Clear map</string>
    <string name="action_clear_geofences">Clear geofences</string>
    <string name="action_clear_route">Clear route</string>
    <string name="action_start_updates">Start updates</string>
    <string name="action_stop_updates">Stop updates</string>
    <string name="action_route">Make route</string>

    <!--error messages-->
    <string name="route_error">Something went wrong...</string>

    <!--geofense error-->
    <string name="geofence_not_available">geofence not available</string>
    <string name="geofence_too_many_geofences">geofence too many geofences</string>
    <string name="geofence_too_many_pending_intents">geofence too many pending intents</string>
    <string name="unknown_geofence_error">unknown geofence error</string>

    <!--route modes-->
    <string name="driving">Driving</string>
    <string name="walking">Walking</string>
    <string name="distance">Distance</string>

    <string name="help_tap">Tap on screen - set target location</string>
    <string name="help_long_tap">Long tap on screen - add geofence on map</string>
</resources>
