<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_clear_map"
        app:showAsAction="never"
        android:title="@string/action_clear_map" />
    <item
        android:id="@+id/menu_clear_geofences"
        app:showAsAction="never"
        android:title="@string/action_clear_geofences" />
    <item
        android:id="@+id/menu_clear_route"
        app:showAsAction="never"
        android:title="@string/action_clear_route" />

    <item
        android:id="@+id/menu_location_updates"
        app:showAsAction="always"
        android:icon="@drawable/start"
        android:orderInCategory="100"
        android:title="@string/action_start_updates"/>

    <item
        android:id="@+id/menu_route"
        app:showAsAction="always"
        android:icon="@drawable/route"
        android:orderInCategory="80"
        android:title="@string/action_route"/>

</menu>